# aptos-pqc

./: .gitmodules  README.md
examples/authenticator/: Cargo.toml
examples/authenticator/fee_payer/: Cargo.toml
examples/authenticator/fee_payer/src/: main.rs
examples/authenticator/multi_agent/: Cargo.toml
examples/authenticator/multi_agent/src/: main.rs
examples/authenticator/multi_signer/: Cargo.toml
examples/authenticator/multi_signer/src/: main.rs
examples/authenticator/single_sender/: Cargo.toml
examples/authenticator/single_sender/src/: main.rs
examples/basic_coin/sources/: basic_coin.move
examples/oqs_dilithium/: build.sh  main.c
experiment/: Cargo.toml
experiment/avx_ffi_dilithium/: Cargo.toml  build.rs
experiment/avx_ffi_dilithium/src/: main.rs
experiment/avx_ffi_multi/: Cargo.toml  build.rs
experiment/avx_ffi_multi/src/: main.rs
experiment/multi_dilithium/: Cargo.toml
experiment/multi_dilithium/src/: main.rs
experiment/multi_ed25519/: Cargo.toml
experiment/multi_ed25519/src/: main.rs
experiment/single_dilithium/: Cargo.toml
experiment/single_dilithium/src/: main.rs
experiment/single_ed25519/: Cargo.toml
experiment/single_ed25519/src/: main.rs
