[package]
name = "axv_ffi_multi"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
pqcrypto-dilithium = "0.5.0"
aptos-crypto = { path = "/home/chsu/aptos-pqc/aptos-core/crates/aptos-crypto" }
aptos-types = { path = "/home/chsu/aptos-pqc/aptos-core/types", features = ["fuzzing"] }
bcs = "0.1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
