[package]
name = "single_dilithium"
version = "0.1.0"
edition = "2024"

[dependencies]
pqcrypto-dilithium = "0.5.0"
aptos-crypto = { path = "/home/chsu/aptos-pqc/aptos-core/crates/aptos-crypto" }
aptos-types = { path = "/home/chsu/aptos-pqc/aptos-core/types", features = ["fuzzing"] }
bcs = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
