[package]
name = "single_ed25519"
version = "0.1.0"
edition = "2024"

[dependencies]
aptos-crypto = { path = "/home/chsu/aptos-pqc/aptos-core/crates/aptos-crypto" }
aptos-types = { path = "/home/chsu/aptos-pqc/aptos-core/types", features = ["fuzzing"] }
bcs = "0.1"
ed25519-dalek = "1.0.1"
rand = "0.7"
array-init = "2.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
